adicionando estilo css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 		<header>
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link rel="stylesheet" href="style.css">
 			<h1>Vinicius Dorneles Souza Ferreira<h1>
 		</header>
 		
 		<p>Alegrete-RS</p>
 		<p>Email:<a href="mailto:41nicius.aleg@gmail"> 41nicius.aleg@gmail.com</a></p>
-        <p>WhatsApp: (55) 981181071</p>
+		<p>WhatsApp: (55) 981181071</p>
 		<p><a href="https://www.linkedin.com/in/vncs-drnls-frrr-069020367/" target="_blank">Linkedin</a></p>
 		<p><a href="https://github.com/Ruivoexe" target="_blank">GitHub</a></p>
 		
-	
 		<h2>Objetivos</h2>
 		
 		<p>
